<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="com.kethu.basicsapp.MainActivity">

    <TextView
        android:id="@+id/hello_world_tv"
        style="@style/MyCustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:visibility="gone" />

    <TextView
        android:id="@+id/count_tv"
        style="@style/MyCustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_0"
        android:visibility="gone" />

    <Button
        android:id="@+id/click_me_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickOnMe"
        android:text="@string/click_me"
        android:visibility="gone" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="CheckBox" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/male_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/female" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/listview"
        android:layout_margin="10dp"
        android:listSelector="@color/colorAccent"
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content" />


</LinearLayout>
